使用response生成字节流来完成登录验证码功能

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,9 +8,17 @@
   	<servlet-name>servletDemo</servlet-name>
   	<servlet-class>ServletDemo.servletDemo</servlet-class>
   </servlet>
+  <servlet>
+  	<servlet-name>drawCheckCode</servlet-name>
+  	<servlet-class>ServletDemo.CheckinDrawer</servlet-class>
+  </servlet>
   
   <servlet-mapping>
   	<servlet-name>servletDemo</servlet-name>
   	<url-pattern>/ServletDemo</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>drawCheckCode</servlet-name>
+  	<url-pattern>/CheckinDrawer</url-pattern>
   </servlet-mapping>
 </web-app>
