--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,24 +1,47 @@
 <!DOCTYPE web-app PUBLIC
  "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
-
+<!--注册servlet-->
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
-  <servlet>
+<!--   <servlet>
   	<servlet-name>servletDemo</servlet-name>
   	<servlet-class>ServletDemo.servletDemo</servlet-class>
-  </servlet>
+  </servlet> -->
   <servlet>
   	<servlet-name>drawCheckCode</servlet-name>
   	<servlet-class>ServletDemo.CheckinDrawer</servlet-class>
   </servlet>
-  
-  <servlet-mapping>
+   <servlet>
+  	<servlet-name>paramTest</servlet-name>
+  	<servlet-class>ServletDemo.ParamServlet</servlet-class>
+  	<init-param>
+  		<param-name>driver</param-name>
+  		<param-value>com.mysql.jdbc.Driver</param-value>
+  	</init-param>
+  	<init-param>
+  		<param-name>url</param-name>
+  		<param-value>jdbc:mysql://localhost:3306/test</param-value>
+  	</init-param>
+  	<init-param>
+  		<param-name>user</param-name>
+  		<param-value>root</param-value>
+  	</init-param>
+  	<init-param>
+  		<param-name>pass</param-name>
+  		<param-value>12345678</param-value>
+  	</init-param>
+  </servlet>
+<!--   <servlet-mapping>
   	<servlet-name>servletDemo</servlet-name>
   	<url-pattern>/ServletDemo</url-pattern>
-  </servlet-mapping>
+  </servlet-mapping> -->
   <servlet-mapping>
   	<servlet-name>drawCheckCode</servlet-name>
   	<url-pattern>/CheckinDrawer</url-pattern>
+  </servlet-mapping>
+     <servlet-mapping>
+  	<servlet-name>paramTest</servlet-name>
+  	<url-pattern>/ParamServlet</url-pattern>
   </servlet-mapping>
 </web-app>
