北京动力节点34课

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,47 +1,225 @@
 <!DOCTYPE web-app PUBLIC
  "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
-<!--注册servlet-->
+<!--注册servlet -->
 <web-app>
-  <display-name>Archetype Created Web Application</display-name>
-<!--   <servlet>
-  	<servlet-name>servletDemo</servlet-name>
-  	<servlet-class>ServletDemo.servletDemo</servlet-class>
-  </servlet> -->
-  <servlet>
-  	<servlet-name>drawCheckCode</servlet-name>
-  	<servlet-class>ServletDemo.CheckinDrawer</servlet-class>
-  </servlet>
-   <servlet>
-  	<servlet-name>paramTest</servlet-name>
-  	<servlet-class>ServletDemo.ParamServlet</servlet-class>
-  	<init-param>
-  		<param-name>driver</param-name>
-  		<param-value>com.mysql.jdbc.Driver</param-value>
-  	</init-param>
-  	<init-param>
-  		<param-name>url</param-name>
-  		<param-value>jdbc:mysql://localhost:3306/test</param-value>
-  	</init-param>
-  	<init-param>
-  		<param-name>user</param-name>
-  		<param-value>root</param-value>
-  	</init-param>
-  	<init-param>
-  		<param-name>pass</param-name>
-  		<param-value>12345678</param-value>
-  	</init-param>
-  </servlet>
-<!--   <servlet-mapping>
-  	<servlet-name>servletDemo</servlet-name>
-  	<url-pattern>/ServletDemo</url-pattern>
-  </servlet-mapping> -->
-  <servlet-mapping>
-  	<servlet-name>drawCheckCode</servlet-name>
-  	<url-pattern>/CheckinDrawer</url-pattern>
-  </servlet-mapping>
-     <servlet-mapping>
-  	<servlet-name>paramTest</servlet-name>
-  	<url-pattern>/ParamServlet</url-pattern>
-  </servlet-mapping>
+	<display-name>Archetype Created Web Application</display-name>
+	<servlet>
+		<servlet-name>servletDemo</servlet-name>
+		<servlet-class>ServletDemo.servletDemo</servlet-class>
+		<!-- 设置优先级，servelt启动时就创建实例，内容填整型,并且值的内容>=0，若小于0和不写是一个意思，越小优先级越高 -->
+		<load-on-startup>-1</load-on-startup>
+	</servlet>
+	<servlet>
+		<servlet-name>drawCheckCode</servlet-name>
+		<servlet-class>ServletDemo.CheckinDrawer</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>paramTest</servlet-name>
+		<servlet-class>ServletDemo.ParamServlet</servlet-class>
+		<init-param>
+			<param-name>driver</param-name>
+			<param-value>com.mysql.jdbc.Driver</param-value>
+		</init-param>
+		<init-param>
+			<param-name>url</param-name>
+			<param-value>jdbc:mysql://localhost:3306/test</param-value>
+		</init-param>
+		<init-param>
+			<param-name>user</param-name>
+			<param-value>root</param-value>
+		</init-param>
+		<init-param>
+			<param-name>pass</param-name>
+			<param-value>12345678</param-value>
+		</init-param>
+	</servlet>
+	<servlet>
+		<servlet-name>servletExample</servlet-name>
+		<servlet-class>ServletDemo.servletExample</servlet-class>
+		<init-param>
+			<param-name>init-Address</param-name>
+			<param-value>中国北京</param-value>
+		</init-param>
+		<init-param>
+			<param-name>init-Location</param-name>
+			<param-value>朝阳区</param-value>
+		</init-param>
+	</servlet>
+	<servlet>
+		<servlet-name>servletExample2</servlet-name>
+		<servlet-class>ServletDemo.servletExample2</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>genericServletExample</servlet-name>
+		<servlet-class>ServletDemo.GenericServletExample</servlet-class>
+		<init-param>
+		<param-name>Company</param-name>
+		<param-value>FIL</param-value>
+		</init-param>
+	</servlet>
+	<servlet>
+		<servlet-name>genericServletExample2</servlet-name>
+		<servlet-class>ServletDemo.GenericServletExample2</servlet-class>
+		<init-param>
+		<param-name>Company2</param-name>
+		<param-value>FIL2</param-value>
+		</init-param>
+	</servlet>
+	<servlet>
+	<servlet-name>loginServlet</servlet-name>
+	<servlet-class>ServletDemo.LoginServlet</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>RegisterServlet</servlet-name>
+		<display-name>RegisterServlet</display-name>
+		<description></description>
+		<servlet-class>ServletDemo.RegisterServlet</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>fieldAttribute</servlet-name>
+		<display-name>fieldAttribute</display-name>
+		<description></description>
+		<servlet-class>ServletDemo.fieldAttribute</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>fieldAttribute2</servlet-name>
+		<display-name>fieldAttribute2</display-name>
+		<description></description>
+		<servlet-class>ServletDemo.fieldAttribute2</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>RequestOtherMethod</servlet-name>
+		<display-name>RequestOtherMethod</display-name>
+		<description></description>
+		<servlet-class>ServletDemo.RequestOtherMethod</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>registerServlet2</servlet-name>
+		<display-name>registerServlet2</display-name>
+		<description></description>
+		<servlet-class>ServletDemo.registerServlet2</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>registerServlet3</servlet-name>
+		<display-name>registerServlet3</display-name>
+		<description></description>
+		<servlet-class>ServletDemo.registerServlet3</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>printWriter</servlet-name>
+		<display-name>printWriter</display-name>
+		<description></description>
+		<servlet-class>ServletDemo.printWriter</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>requestDispatcherForward</servlet-name>
+		<display-name>requestDispatcherForward</display-name>
+		<description></description>
+		<servlet-class>ServletDemo.requestDispatcherForward</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>otherServlet</servlet-name>
+		<display-name>otherServlet</display-name>
+		<description></description>
+		<servlet-class>ServletDemo.otherServlet</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>responseSendredirect</servlet-name>
+		<display-name>responseSendredirect</display-name>
+		<description></description>
+		<servlet-class>ServletDemo.responseSendredirect</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>otherServlet2</servlet-name>
+		<display-name>otherServlet2</display-name>
+		<description></description>
+		<servlet-class>ServletDemo.otherServlet2</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>servletDemo</servlet-name>
+		<url-pattern>/ServletDemo</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>drawCheckCode</servlet-name>
+		<url-pattern>/CheckinDrawer</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>paramTest</servlet-name>
+		<url-pattern>/ParamServlet</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>servletExample</servlet-name>
+		<url-pattern>/ServletExample</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>servletExample2</servlet-name>
+		<url-pattern>/ServletExample2</url-pattern>
+		<!-- /*是真正全路径模式，可以拦截所有请求,无论静态还是动态都会被拦截 /只会拦截静态请求，对于动态请求不会被拦截 -->
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>genericServletExample</servlet-name>
+		<url-pattern>/GenericServletExample</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>genericServletExample2</servlet-name>
+		<url-pattern>/GenericServletExample2</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>loginServlet</servlet-name>
+		<url-pattern>/LoginServlet</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>RegisterServlet</servlet-name>
+		<url-pattern>/RegisterServlet</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>fieldAttribute</servlet-name>
+		<url-pattern>/FieldAttribute</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>fieldAttribute2</servlet-name>
+		<url-pattern>/FieldAttribute2</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>RequestOtherMethod</servlet-name>
+		<url-pattern>/xxxx/ooooo/jjj/*</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>registerServlet2</servlet-name>
+		<url-pattern>/RegisterServlet2</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>registerServlet3</servlet-name>
+		<url-pattern>/RegisterServlet3</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>printWriter</servlet-name>
+		<url-pattern>/PrintWriter</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>requestDispatcherForward</servlet-name>
+		<url-pattern>/RequestDispatcherForward</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>otherServlet</servlet-name>
+		<url-pattern>/otherServlet</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>responseSendredirect</servlet-name>
+		<url-pattern>/responseSendredirect</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>otherServlet2</servlet-name>
+		<url-pattern>/otherServlet2</url-pattern>
+	</servlet-mapping>
+	<!-- 设置全局参数 -->
+	<context-param>
+		<param-name>Context-Name</param-name>
+		<param-value>FIL(富达科技有限公司)</param-value>
+	</context-param>
+	<context-param>
+		<param-name>Context-Address</param-name>
+		<param-value>中国辽宁大连软件园</param-value>
+	</context-param>
 </web-app>
